# mini-crypto

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  README.md.in  start.sh
.github/workflows/: c-cpp.yml  release.yml
doc/: .gitignore  CMakeLists.txt  CMakeLists.txt.in
doc/man1/: CMakeLists.txt  CMakeLists.txt.in  hello.adoc
pkg/: CMakeLists.txt  CMakeLists.txt.in
pkg/arch/: .gitignore  PKGBUILD  PKGBUILD.in
pkg/ubuntu/: CMakeLists.txt  CMakeLists.txt.in  CPackConfig.cmake.in  CPackConfig.cmake.in.in
src/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  arguments.cpp  arguments.hpp  main.cpp  main.cpp.in  node.cpp  node.hpp
src/block/: CMakeLists.txt  block.cpp  block.hpp  transactions.hpp
src/block/container/: main.cpp
src/block/container/blockchain/: CBlock.cpp  CBlock.h  CChain.cpp  CChain.h
src/miner/: CMakeLists.txt  collect_transaction.cpp  collect_transaction.hpp  mine.hpp  mined.cpp  mined.hpp  miner_broadcast.cpp  miner_broadcast.hpp
src/node/: CMakeLists.txt  boost.cpp  message.hpp  node.cpp  node.hpp  node_create_info.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_server.cpp  tcp_server.hpp
src/node/message/: CMakeLists.txt  base.hpp  handle.cpp  handle.hpp  pairs.cpp  pairs.hpp  transaction.cpp  transaction.hpp  transactions.cpp  transactions.hpp
